# openapi.yaml
@@ -64,6 +64,24 @@ paths:
       description: After authentication, creates a user session with the Facebook OAuth method or redirects to the sign-in page.
       tags:
         - Utility
+  /sales:
+    get:
+      tags:
+        - Products
+      summary: Retrieves the top 3 most sold products in the database
+      operationId: getBestSales
+      responses:
+        "200":
+          description: A list of products
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Sale"
+        "500":
+          description: server error
+
   /products:
     get:
       tags:
@@ -878,6 +896,29 @@ components:
         description:
           type: string
       required:
+        - name
+        - price
+    Sale:
+      type: object
+      properties:
+        product_id:
+          type: integer
+          example: 1
+        name:
+          type: string
+          example: "tomato sauce"
+        price:
+          type: number
+          example: 4.90
+        description:
+          type: string
+          example: "A famous brand of tomato sauce"
+          nullable: true
+        total_sold:
+          type: integer
+          example: 4
+      required:
+        - id
         - name
         - price
     User:
